--- a/media/jellyfin/compose.yml
+++ b/media/jellyfin/compose.yml
@@ -17,3 +17,16 @@ services:
       - 7359:7359/udp #Service Discovery
       - 1900:1900/udp #Client Discovery
     restart: unless-stopped
+
+  jellyseerr:
+    container_name: jellyseerr
+    image: fallenbagel/jellyseerr:latest
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Asia/Kolkata
+    volumes:
+      - ./jellyseerr:/app/config
+    ports:
+      - 5055:5055
+    restart: unless-stopped
