--- a/media/tubearchivist/compose.yml
+++ b/media/tubearchivist/compose.yml
@@ -7,6 +7,7 @@ services:
       - xpack.security.enabled=false
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
+      - ELASTIC_PASSWORD=changeme
     ulimits:
       memlock:
         soft: -1
@@ -32,6 +33,8 @@ services:
       - TA_PASSWORD=admin
       - ELASTICSEARCH=http://tube-archivist-es:9200
       - REDIS=redis://tube-archivist-redis:6379
+      - ELASTIC_PASSWORD=changeme
+
     volumes:
       - tube_data:/cache
       - /mnt/media/youtube:/youtube
