--- a/media/tubearchivist/compose.yml
+++ b/media/tubearchivist/compose.yml
@@ -32,7 +32,7 @@ services:
       - TA_USERNAME=admin
       - TA_PASSWORD=admin
       - ES_URL=http://tube-archivist-es:9200
-      - REDIS=redis://tube-archivist-redis:6379
+      - REDIS="redis://tube-archivist-redis:6379"
       - ELASTIC_PASSWORD=changeme
       - TA_HOST=http://100.70.85.92:8000
 
