--- a/media/tubearchivist/compose.yml
+++ b/media/tubearchivist/compose.yml
@@ -1,46 +1,57 @@
 services:
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.3
-    container_name: tube-archivist-es
+  tubearchivist:
+    container_name: tubearchivist
+    restart: unless-stopped
+    image: bbilly1/tubearchivist
+    ports:
+      - 8000:8000
+    volumes:
+      - /mnt/media/youtube:/youtube
+      - cache:/cache
     environment:
-      - discovery.type=single-node
-      - xpack.security.enabled=false
-      - bootstrap.memory_lock=true
+      - ES_URL=http://archivist-es:9200     # needs protocol e.g. http and port
+      - REDIS_CON=redis://archivist-redis:6379
+      - HOST_UID=1000
+      - HOST_GID=1000
+      - TA_HOST=http://100.70.85.92:8000  # set your host name with protocol and port
+      - TA_USERNAME=tubearchivist           # your initial TA credentials
+      - TA_PASSWORD=verysecret              # your initial TA credentials
+      - ELASTIC_PASSWORD=verysecret         # set password for Elasticsearch
+      - TZ=Asia/Kolkata               # set your time zone
+    depends_on:
+      - archivist-es
+      - archivist-redis
+  archivist-redis:
+    image: redis
+    container_name: archivist-redis
+    restart: unless-stopped
+    expose:
+      - "6379"
+    volumes:
+      - redis:/data
+    depends_on:
+      - archivist-es
+  archivist-es:
+    image: bbilly1/tubearchivist-es         # only for amd64, or use official es 8.18.0
+    container_name: archivist-es
+    restart: unless-stopped
+    environment:
+      - "ELASTIC_PASSWORD=verysecret"       # matching Elasticsearch password
       - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
-      - ELASTIC_PASSWORD=changeme
+      - "xpack.security.enabled=true"
+      - "discovery.type=single-node"
+      - "path.repo=/usr/share/elasticsearch/data/snapshot"
     ulimits:
       memlock:
         soft: -1
         hard: -1
     volumes:
-      - es_data:/usr/share/elasticsearch/data
-    restart: unless-stopped
-
-  redis:
-    image: redis:latest
-    container_name: redis
-    restart: unless-stopped
-
-  tube-archivist:
-    image: bbilly1/tubearchivist
-    container_name: tube-archivist
-    ports:
-      - 8000:8000
-    environment:
-      - HOST_UID=1000
-      - HOST_GID=1000
-      - TA_USERNAME=admin
-      - TA_PASSWORD=admin
-      - ES_URL=http://tube-archivist-es:9200
-      - REDIS="redis://redis:6379"
-      - ELASTIC_PASSWORD=changeme
-      - TA_HOST=http://100.70.85.92:8000
-
-    volumes:
-      - tube_data:/cache
-      - /mnt/media/youtube:/youtube
-    restart: unless-stopped
+      - es:/usr/share/elasticsearch/data    # check for permission error when using bind mount, see readme
+    expose:
+      - "9200"
 
 volumes:
-  es_data:
-  tube_data:
+  media:
+  cache:
+  redis:
+  es:
