--- a/core/traefik/compose.yaml
+++ b/core/traefik/compose.yaml
@@ -1,55 +1,55 @@
-secrets:
-  cf-token:
-    file: ./cf-token
 services:
   traefik:
-    image: traefik:latest # or traefik:v3.3 to pin a version
+    image: traefik:latest
     container_name: traefik
     restart: unless-stopped
     security_opt:
-      - no-new-privileges:true # helps to increase security
-    secrets:
-      - cf-token # the secret at the top of this file
+      - no-new-privileges:true
     env_file:
-      - .env # store other secrets e.g., dashboard password
+      - .env
     networks:
-       core-network:
+      - core-network
     ports:
-      - 80:80
-      - 443:443
-      - 8081:8080
-     # - 10000:10000 # optional
-     # - 33073:33073 # optional
+      - "80:80"
+      - "443:443"
+      - "8081:8080" # dashboard port (optional external access)
     environment:
-      - TRAEFIK_DASHBOARD_CREDENTIALS=${TRAEFIK_DASHBOARD_CREDENTIALS}
-      # - CF_API_EMAIL=your@email.com # Cloudflare email
-      # - CF_DNS_API_TOKEN=YOUR-TOKEN # Cloudflare API Token
-      - CF_DNS_API_TOKEN_FILE=/run/secrets/cf-token # see https://doc.traefik.io/traefik/https/acme/#providers
-      # token file is the proper way to do it
+      - CF_DNS_API_TOKEN=${CF_DNS_API_TOKEN}
     volumes:
-      - /etc/localtime:/etc/localtime:ro
+      # Required for Traefik to detect other containers and their labels
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - /home/ubuntu/docker/traefik/traefik.yaml:/traefik.yaml:ro
-      - /home/ubuntu/docker/traefik/acme.json:/acme.json
-      - /home/ubuntu/docker/traefik/config.yaml:/config.yaml:ro
-      - /home/ubuntu/docker/traefik/logs:/var/log/traefik
+
+      # Static and dynamic Traefik configuration files
+      - ./traefik.yaml:/traefik.yaml:ro
+      - ./config.yaml:/config.yaml:ro
+      - ./config/externals.yml:/etc/traefik/dynamic/externals.yml:ro
+      
+      # ACME cert storage
+      - ./acme.json:/acme.json
+
+      # Logs
+      - ./logs:/var/log/traefik
     labels:
+      # Enable Traefik for this container
       - "traefik.enable=true"
-      - "traefik.http.routers.traefik.entrypoints=http"
+
+      # Redirect HTTP -> HTTPS
+      - "traefik.http.routers.traefik.entrypoints=web"
       - "traefik.http.routers.traefik.rule=Host(`traefik.jarvs.dev`)"
-      - "traefik.http.middlewares.traefik-auth.basicauth.users=${TRAEFIK_DASHBOARD_CREDENTIALS}"
       - "traefik.http.middlewares.traefik-https-redirect.redirectscheme.scheme=https"
-      - "traefik.http.middlewares.sslheader.headers.customrequestheaders.X-Forwarded-Proto=https"
       - "traefik.http.routers.traefik.middlewares=traefik-https-redirect"
-      - "traefik.http.routers.traefik-secure.entrypoints=https"
+
+      # HTTPS router for dashboard
+      - "traefik.http.routers.traefik-secure.entrypoints=websecure"
       - "traefik.http.routers.traefik-secure.rule=Host(`traefik.jarvs.dev`)"
-      - "traefik.http.routers.traefik-secure.middlewares=traefik-auth"
       - "traefik.http.routers.traefik-secure.tls=true"
       - "traefik.http.routers.traefik-secure.tls.certresolver=cloudflare"
       - "traefik.http.routers.traefik-secure.tls.domains[0].main=jarvs.dev"
       - "traefik.http.routers.traefik-secure.tls.domains[0].sans=*.jarvs.dev"
+
+      # Directly expose dashboard without auth (not recommended for public internet)
       - "traefik.http.routers.traefik-secure.service=api@internal"
 
 networks:
   core-network:
-    external: true # or comment this line to auto create the network
+    external: true
