--- a/core/adguard/compose.yaml
+++ b/core/adguard/compose.yaml
@@ -5,16 +5,19 @@ services:
     restart: unless-stopped
     networks:
       - core-network
+    ports:
+      # DNS
+      - "53:53/tcp"
+      - "53:53/udp"
     volumes:
       - ./data/work:/opt/adguardhome/work
       - ./data/conf:/opt/adguardhome/conf
-  labels:
-    - "traefik.enable=true"
-    - "traefik.http.routers.adguard.rule=Host(`adguard.jarvs.dev`)"
-    - "traefik.http.routers.adguard.entrypoints=websecure"
-    - "traefik.http.routers.adguard.tls.certresolver=cloudflare"
-    - "traefik.http.services.adguard.loadbalancer.server.port=3000"
-
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.adguard.rule=Host(`adguard.jarvs.dev`)"
+      - "traefik.http.routers.adguard.entrypoints=websecure"
+      - "traefik.http.routers.adguard.tls.certresolver=cloudflare"
+      - "traefik.http.services.adguard.loadbalancer.server.port=80"
 networks:
   core-network:
     external: true
