--- a/core/glance/docker-compose.yml
+++ b/core/glance/docker-compose.yml
@@ -14,9 +14,9 @@ services:
       labels:
         - "traefik.enable=true"
         - "traefik.http.routers.glance.rule=Host(`glance.jarvs.dev`)"
-        - "traefik.http.routers.glance.entrypoints=web"
+        - "traefik.http.routers.glance.entrypoints=websecure"
+        - "traefik.http.routers.glance.tls.certresolver=cloudflare"
         - "traefik.http.services.glance.loadbalancer.server.port=8080"
-
 networks:
   core-network:
     external: true
