--- a/core/portainer/docker-compose.yml
+++ b/core/portainer/docker-compose.yml
@@ -11,6 +11,12 @@ services:
       - portainer_data:/data
     networks:
       - core-network
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.portainer.rule=Host(`portainer.jarvs.dev`)"
+      - "traefik.http.routers.portainer.entrypoints=websecure"
+      - "traefik.http.routers.portainer.tls.certresolver=cloudflare"
+      - "traefik.http.services.portainer.loadbalancer.server.port=9000"
 
 networks:
   core-network:
