--- a/core/speedtest/compose.yml
+++ b/core/speedtest/compose.yml
@@ -14,6 +14,12 @@ services:
         - SPEEDTEST_SCHEDULE=6 */2 * * *
         - PUBLIC_DASHBOARD=true
         - DISPLAY_TIMEZONE=Asia/Kolkata
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.speed.rule=Host(`speed.jarvs.dev`)"
+      - "traefik.http.routers.speed.entrypoints=websecure"
+      - "traefik.http.routers.speed.tls.certresolver=cloudflare"
+      - "traefik.http.services.speed.loadbalancer.server.port=80"
 
     volumes:
         - /path/to/data:/config
